--- a/src/compontents/NavBar/NavBar.module.sass
+++ b/src/compontents/NavBar/NavBar.module.sass
@@ -3,14 +3,14 @@ $gradient-shadow: linear-gradient(45deg, #fb0094,#0000ff,#00ff00,#ffff00,#ff0000
 .navbar
     position: sticky
     top: 0
+    width: 100%
     background-color: #131313
-    width: 100vw
     display: flex
     justify-content: space-around
-    align-items: center
     flex-direction: row
-    padding: 20px 10px
+    padding: 20px 0
     box-shadow: #713572 5px 5px 10px
+    margin: 0
 
 .navlink
     color: white
