--- a/src/compontents/Wave/Wave.module.sass
+++ b/src/compontents/Wave/Wave.module.sass
@@ -10,6 +10,7 @@ $wave-height: 11em
   transform: translate3d(0, 0, 0)
   opacity: 0.8
   bottom: 0
+  margin: 0
   left: 0
   z-index: -1
   box-shadow: #f4f4f4 -25px -3px 13px
@@ -61,5 +62,6 @@ $wave-height: 11em
   background-color: #131313
 
 .waveSpacer
-  width: 99%
+  width: 100%
   height: $wave-height + 1em
+  margin: 0
