--- a/src/index.sass
+++ b/src/index.sass
@@ -6,8 +6,8 @@ body
   margin: 0
   -webkit-font-smoothing: antialiased
   -moz-osx-font-smoothing: grayscale
-  height: 100vh
-  width: 100vw
+  height: 100%
+  width: 100%
   display: flex
   flex-direction: column
   align-items: center
